<?xml version="1.0"?>
<package format="3">
  <name>rslcpp</name>
  <version>1.0.0</version>
  <description>ROS 2 Simulation Library in C++</description>
  <maintainer email="simon.sagmeister@tum.de">Simon Sagmeister</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rslcpp_exceptions</depend>
  <depend>rslcpp_time_delay_backend</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>