<?xml version="1.0"?>
<package format="3">
  <name>rslcpp_dynamic_node_composition</name>
  <version>1.0.0</version>
  <description>A package for loading rclcpp components dynamically</description>
  <maintainer email="simon.sagmeister@tum.de">Simon Sagmeister</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>ament_index_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
